--- a/lucyGraph.Rmd
+++ b/lucyGraph.Rmd
@@ -9,10 +9,38 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Initialize
 
 ```{r, message=FALSE, warning=FALSE}
 library(tidyverse)
-airbnb <- read.csv("https://www.kaggle.com/dgomonov/new-york-city-airbnb-open-data#AB_NYC_2019.csv")
+library(ggplot2)
+airbnb <- read.csv("AB_NYC_2019.csv")
 head(airbnb)
 ```
+
+## Histogram
+
+```{r, message=FALSE, warning=FALSE}
+ggplot(airbnb, aes(x = price, fill = as.factor(neighbourhood_group)))+
+    geom_histogram()+
+    labs(title = "Histogram of NYC Airbnb Price",
+         x = "Price ($)",
+         y = "Frequency Count",
+         fill = "Neighbourhood Group")
+```
+
+## Coorelation Heatmap
+
+```{r, message=FALSE, warning=FALSE}
+
+```
+
+## Parallel Coordinate Graph and Radar Graph
+
+```{r, message=FALSE, warning=FALSE}
+
+```
+
+
+
+
